--- a/index.html
+++ b/index.html
@@ -175,22 +175,22 @@
 				<div class="step invisible">
 				</div>
 				<div class="step" data-step="1" data-scrollama-index="0">
-				Один квадрат на графике это одна кинофраншиза. Всего мы проанализировали 72 кинофраншизы, в сумме это 323 фильма.
+				One square on the chart is one film franchise. In total, we analyzed 72 film franchises, totaling 323 films.
 				</div>
 				<div class="step invisible">
 				</div>
 				<div class="step" data-step="2" data-scrollama-index="1">
-				В 51 кинофраншизе из 72 количество умерших киногероев со временем увеличилось. 
+				The increase in the percentage of deceased film characters occurred only in 51 film franchises out of 72. 
 				</div>
 				<div class="step invisible">
 				</div>
 				<div class="step" data-step="2" data-scrollama-index="1">
-				В 19 кинофраншизах из 72 число умерших киногероев со временем снизилось.  
+				In 19 film franchises out of 72, it declined.  
 				</div>
 				<div class="step invisible">
 				</div>
 				<div class="step" data-step="3" data-scrollama-index="1">
-				68 кинофраншиз из 72 получили хорошие кассовые сборы.   
+				At the same time, 68 film franchises out of 72 received good box office receipts.   
 				</div>
 				<div class="step invisible">
 				</div>
